      repositories has been resolved
    * Starting in 2.0.20, dependency resolution started locking the database 
      unnecessarily.  This affected rmake dependency resolution.
    * mirroring code now correctly detects when access control changes
      in the source repository require the generation of absolute changesets
      for mirroring. (CNY-2888)
    
  o Client Changes:
    * Boolean conaryrc option downloadFirst has been added to allow
      for downloading all required changesets from the repository before
      proceeding with the update steps. (CNY-2808)

Changes in 2.0.21:
  o Build Changes:
    * Added support for RPM payloads which have been compressed with
      lzma.  The /usr/bin/unlzma program must be available to use this
      feature.  (CNY-2834)

  o Client Changes:
    * Added separate s390x architecture. (CNY-2852)
    * An error introduced in 2.0.20 which caused an assertion failure during
      dependency checking has been fixed (CNY-2883)

Changes in 2.0.20:
  o Code Changes:
    * Dependency checking can now be run without computing the dependency
      order
    * Added closeDatabase parameter when creating an updateJob to prevent
      that updateJob from closing the database when it's destroyed. This
      is a workaround to support CNY-1834
    * Build dependency temporary tables incrementally instead of rebuilding
      them each time. This results in speedup for group building approaching
      50%.

  o Bug Fixes:
    * updates after a local update of a package that is referenced in
      multiple groups now function again. (CNY-2882)

Changes in 2.0.19:
  o Bug Fixes:
    * Removed unnecessary repository accesses that were occuring while
      determining local system changes during an update. (CNY-2876)
    * "import os" within recipes now functions again. (CNY-2879)

Changes in 2.0.18:
  o Protocol Changes:
    * The addRoleMember() and getRoleMembers() calls are now exposed
      via XMLRPC. (CNY-2862)